# GharanaGold

./: .gitignore  README.md  erp.db  index.py  pyproject.toml  requirements.txt  vercel.json
app/: __init__.py  ai_engine.py  email_service.py  models.py
app/blueprints/: auth.py  inventory.py  main.py  manufacturing.py  purchase.py  reports.py  sales.py  settings.py
app/static/css/: style.css
app/templates/: base.html  sidebar.html
app/templates/auth/: audit.html  edit_user.html  login.html  register.html  users.html
app/templates/dashboard/: index.html
app/templates/inventory/: adjust.html  alerts.html  dashboard.html  form.html  history.html  index.html  view.html
app/templates/manufacturing/: form.html  index.html
app/templates/purchase/: bill_form.html  create_order.html  inward_form.html  orders.html  payment_form.html  vendor_form.html  vendors.html  view_order.html
app/templates/reports/: index.html
app/templates/sales/: add_customer.html  create.html  customers.html  edit_customer.html  index.html  receipt.html
app/templates/settings/: general.html  notifications.html
